--- a/FleetManagement.API/FleetManagement.API.csproj
+++ b/FleetManagement.API/FleetManagement.API.csproj
@@ -13,5 +13,10 @@
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.10.9" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\FleetManagement.Domain\FleetManagement.Domain.csproj" />
+    <ProjectReference Include="..\FleetManagement.Infrastructure\FleetManagement.Infrastructure.csproj" />
+  </ItemGroup>
+
 
 </Project>
